<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
       android:id="@+id/button_add_word"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/label_add_word"
       android:onClick="startAddWordActivity"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/label_search_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_search_word"
            android:background="@drawable/black_border"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/field_search_word"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/label_enter_keyword" />

        <Button
            android:id="@+id/button_search_word"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="searchWord"
            android:text="@string/label_OK" />

    </LinearLayout>
    
    <TextView
       android:id="@+id/label_search_result"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/label_search_result"
       android:background="@drawable/black_border"
       android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/list_search_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>

</LinearLayout>
