<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/field_word_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/label_enter_word">

    </EditText>

    <EditText
        android:id="@+id/field_word_desc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/label_enter_desc" />

    <Button
        android:id="@+id/button_create_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_add_word"
        android:onClick="addWord"/>

</LinearLayout>